test/ingresses-test.yaml
kind: Pod
apiVersion: v1
metadata:
  name: internal-app
  labels:
    app: http-echo-internal
spec:
  containers:
    - name: internal-app
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=internal, vieja"
---
kind: Pod
apiVersion: v1
metadata:
  name: external-app
  labels:
    app: http-echo-external
spec:
  containers:
    - name: bar-app
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=external, papá"
---
kind: Service
apiVersion: v1
metadata:
  name: internal-service
spec:
  type: ClusterIP
  selector:
    app: http-echo-internal
  ports:
    # Default port used by the image
    - protocol: TCP
      port: 80
      targetPort: 5678
---
kind: Service
apiVersion: v1
metadata:
  name: external-service
spec:
  type: ClusterIP
  selector:
    app: http-echo-external
  ports:
    # Default port used by the image
    - protocol: TCP
      port: 80
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-service-ingress
spec:
  ingressClassName: internal-nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress
spec:
  ingressClassName: external-nginx
  rules:
    - http:
        paths:
          - path: /external
            pathType: Prefix
            backend:
              service:
                name: external-service
                port:
                  number: 80
